added solution to 8.7

--- a/8.6/8.6.vcxproj.filters
+++ b/8.6/8.6.vcxproj.filters
@@ -13,5 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\how_to_1">
+      <UniqueIdentifier>{4fad245c-99bb-457d-9bf8-7edd0d08ae1e}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="8.6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="how_to_1\worldpop.txt">
+      <Filter>Resource Files\how_to_1</Filter>
+    </Text>
   </ItemGroup>
 </Project>
